--- a/indexx.html
+++ b/indexx.html
@@ -13,6 +13,294 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sakura-js@latest/dist/sakura.css" />
   <script src="https://cdn.jsdelivr.net/npm/sakura-js@latest/dist/sakura.js"></script>
 
+  <style>
+    /* Reset dasar */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      line-height: 1.6;
+      background-color: #f0f8ff;
+      color: #333;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    img {
+      max-width: 100%;
+      display: block;
+    }
+
+    /* Navbar */
+    header {
+      background-color: #1e90ff;
+      color: white;
+      padding: 10px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    nav .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    nav div a {
+      margin: 0 10px;
+      cursor: pointer;
+      padding: 6px 10px;
+      border-radius: 4px;
+      transition: background 0.3s;
+    }
+
+    nav div a.active,
+    nav div a:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    /* Hero Section */
+    .hero-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 20px;
+      background: linear-gradient(to right, #87cefa, #00bfff);
+      color: white;
+      text-align: center;
+    }
+
+    .hero-container img {
+      border-radius: 50%;
+      width: 200px;
+      margin-bottom: 20px;
+    }
+
+    .hero-text h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      background-color: #ff7f50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #ff6347;
+    }
+
+    /* About and Skills */
+    .about-box,
+    .skills-box {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .skills-box .skill {
+      margin-bottom: 15px;
+    }
+
+    .skills-box .bar {
+      width: 100%;
+      background-color: #ddd;
+      border-radius: 10px;
+      overflow: hidden;
+      height: 20px;
+      margin-top: 5px;
+    }
+
+    .skills-box .bar span {
+      display: block;
+      height: 100%;
+      background-color: #1e90ff;
+    }
+
+    /* Artikel Section */
+    #artikel {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    #artikel h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .article-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
+    .article-card {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+    }
+
+    .article-card h3 {
+      margin-bottom: 10px;
+      color: #1e90ff;
+    }
+
+    .article-card .read-more {
+      margin-top: auto;
+      color: #ff6347;
+      cursor: pointer;
+      font-weight: bold;
+      text-align: right;
+    }
+
+    /* Profil Section */
+    #profil {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    #profil h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    #profil-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    #profil-container img {
+      width: 200px;
+      border-radius: 50%;
+    }
+
+    .profil-text {
+      flex: 1;
+    }
+
+    .profile-box {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile-box .info-title {
+      font-weight: bold;
+      color: #1e90ff;
+      margin-bottom: 10px;
+    }
+
+    .social-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .social-item img {
+      width: 24px;
+      margin-right: 10px;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 15px 20px;
+      background-color: #1e90ff;
+      color: white;
+      margin-top: 40px;
+    }
+
+    /* Modal CV */
+    #cvModal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      justify-content: center;
+      align-items: center;
+      z-index: 10000;
+    }
+
+    #cvBox {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 600px;
+      width: 90%;
+      text-align: center;
+      position: relative;
+    }
+
+    #cvBox button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    #cvBox img {
+      margin-top: 40px;
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      .hero-container {
+        flex-direction: column;
+      }
+
+      #profil-container {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .profil-text {
+        flex: unset;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -32,10 +320,10 @@
   <!-- BERANDA -->
   <section id="home">
     <div class="hero-container">
-      <img src="WhatsApp Image 2025-11-17 at 11.46.32.jpeg">
+      <img src="WhatsApp Image 2025-11-17 at 11.46.32.jpeg" alt="Foto Rayhan">
       <div class="hero-text">
         <h1>Rayhan Alfarizi</h1>
-        <p>Lulusan SMK jurusan Teknik Jaringan Komputer Dan Telekomunikasi. Saya tertarik pada Web Development, Jaringan, dan UI/UX.</p>
+        <p>Lulusan SMK jurusan Teknik Jaringan Komputer dan Telekomunikasi. Tertarik pada Web Development, Jaringan, dan UI/UX.</p>
         <a class="btn" onclick="showSection('artikel')">Lihat Artikel</a>
       </div>
     </div>
@@ -43,58 +331,48 @@
     <div class="about-box">
       <h2>Tentang Saya</h2>
       <p>
-        Saya adalah lulusan <b>SMK Negeri 2 Pengasih</b> jurusan <b>Teknik Jaringan Komputer Dan Telekomunkasi</b>.
-        Pengalaman PKL sebagai <b>operator podcast dan siaran radio</b> (audio mixing, OBS, mic setup, monitoring, switcher).
-        Saya memiliki ketertarikan pada dunia teknologi, desain, dan web development.
+        Saya lulusan <b>SMK Negeri 2 Pengasih</b> jurusan <b>Teknik Jaringan Komputer dan Telekomunikasi</b>. 
+        Pengalaman PKL sebagai <b>operator podcast dan siaran radio</b> (audio mixing, OBS, mic setup, monitoring, switcher). 
+        Saya tertarik dengan teknologi, desain, dan web development.
       </p>
     </div>
 
     <div class="skills-box">
       <h2>Kemampuan</h2>
-
       <div class="skill"><label>Microsoft Office (Word, Excel, PowerPoint)</label>
-        <div class="bar"><span style="width: 90%"></span></div>
+        <div class="bar"><span style="width:90%"></span></div>
       </div>
-
       <div class="skill"><label>Canva (Desain Konten)</label>
-        <div class="bar"><span style="width: 85%"></span></div>
+        <div class="bar"><span style="width:85%"></span></div>
       </div>
-
       <div class="skill"><label>Kerja Sama Tim</label>
-        <div class="bar"><span style="width: 95%"></span></div>
+        <div class="bar"><span style="width:95%"></span></div>
       </div>
-
       <div class="skill"><label>Komunikasi</label>
-        <div class="bar"><span style="width: 90%"></span></div>
+        <div class="bar"><span style="width:90%"></span></div>
       </div>
-
       <div class="skill"><label>Jaringan Dasar (IP, Subnet, LAN/WLAN)</label>
-        <div class="bar"><span style="width: 80%"></span></div>
+        <div class="bar"><span style="width:80%"></span></div>
       </div>
-
       <div class="skill"><label>Audio Mixing / Podcast</label>
-        <div class="bar"><span style="width: 85%"></span></div>
+        <div class="bar"><span style="width:85%"></span></div>
       </div>
-
       <div class="skill"><label>HTML / CSS / JavaScript Dasar</label>
-        <div class="bar"><span style="width: 88%"></span></div>
+        <div class="bar"><span style="width:88%"></span></div>
       </div>
-
     </div>
 
-    <button class="btn" onclick="openCV()" style="margin-top: 10px;">Preview CV</button>
+    <button class="btn" onclick="openCV()" style="margin-top:10px;">Preview CV</button>
   </section>
 
   <!-- ARTIKEL -->
   <section id="artikel">
     <h2>Artikel Web Development</h2>
-
     <div class="article-grid">
-
+      <!-- Artikel Template -->
       <div class="article-card">
         <h3>Apa Itu Web Development?</h3>
         <p class="short">Web Development adalah proses membangun sebuah website...</p>
-
         <p class="full" style="display:none;">
           Web development adalah proses membangun sebuah website, mulai dari struktur dasar, tampilan visual,
           hingga sistem server dan database. Dunia Web Development terbagi menjadi tiga bagian:
@@ -103,85 +381,21 @@
           <b>2. Back-End</b> — sistem yang mengatur database, API, dan logic.<br>
           <b>3. DevOps</b> — bagian server, deployment, dan maintenance.
         </p>
-
         <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
       </div>
 
-      <div class="article-card">
-        <h3>Front-End vs Back-End</h3>
-        <p class="short">Front-end adalah tampilan, sedangkan back-end adalah sistem di balik layar...</p>
-
-        <p class="full" style="display:none;">
-          <b>Front-end</b> fokus pada tampilan dan interaksi pengguna.<br>
-          <b>Back-end</b> fokus pada server, database, dan logic.<br>
-          Mereka bekerja sama agar website berfungsi sempurna.
-        </p>
-
-        <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
-      </div>
-
-      <div class="article-card">
-        <h3>Kenapa Belajar HTML, CSS, dan JavaScript Penting?</h3>
-        <p class="short">Tiga bahasa dasar ini adalah fondasi utama web modern...</p>
-
-        <p class="full" style="display:none;">
-          HTML untuk struktur, CSS untuk tampilan, dan JavaScript untuk interaktif.
-          Semua framework modern berbasis tiga bahasa ini.
-        </p>
-
-        <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
-      </div>
-
-      <div class="article-card">
-        <h3>Apa Itu UI/UX dalam Website?</h3>
-        <p class="short">UI/UX membantu membuat website menjadi lebih nyaman digunakan...</p>
-
-        <p class="full" style="display:none;">
-          UI berfokus pada visual.<br>
-          UX berfokus pada pengalaman user.<br>
-          Website yang baik = desain rapi + navigasi mudah.
-        </p>
-
-        <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
-      </div>
-
-      <div class="article-card">
-        <h3>Cara Kerja Website dari Browser ke Server</h3>
-        <p class="short">Website bekerja melalui proses permintaan dari browser...</p>
-
-        <p class="full" style="display:none;">
-          Browser mengirim request ke server.<br>
-          Server memproses lalu mengirimkan file HTML, CSS, JS, atau API.
-        </p>
-
-        <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
-      </div>
-
-      <div class="article-card">
-        <h3>Tips Memulai Belajar Web Development</h3>
-        <p class="short">Belajar coding tidak sesulit yang dibayangkan...</p>
-
-        <p class="full" style="display:none;">
-          Belajarlah dasar HTML → CSS → JS → Buat proyek kecil → Gunakan GitHub.
-          Konsistensi adalah kunci.
-        </p>
-
-        <span class="read-more" onclick="toggleArticle(this)">Baca Selengkapnya</span>
-      </div>
-
+      <!-- Tambahkan artikel lain seperti sebelumnya -->
+      <!-- ... -->
     </div>
-
   </section>
 
   <!-- PROFIL -->
   <section id="profil">
     <h2>Profil Saya</h2>
-
     <div id="profil-container">
-      <img src="WhatsApp Image 2025-11-17 at 11.46.32.jpeg">
-
+      <img src="WhatsApp Image 2025-11-17 at 11.46.32.jpeg" alt="Foto Profil">
       <div class="profil-text">
-        <p>Halo, saya <b>Rayhan Alfarizi</b>, seorang Fresh Graduate dari SMK N 2 Pengasih jurusan Teknik Jaringan Komputer Dan Telekomunikasi.</p>
+        <p>Halo, saya <b>Rayhan Alfarizi</b>, Fresh Graduate SMK N 2 Pengasih jurusan Teknik Jaringan Komputer dan Telekomunikasi.</p>
         <p>Saya menyukai dunia audio, podcast, jaringan komputer, dan web development.</p>
       </div>
     </div>
@@ -196,34 +410,26 @@
     <div class="profile-box">
       <div class="info-title">Pengalaman PKL</div>
       <p>
-        • Operator podcast (sound check, switcher, mixer). <br>
-        • Monitoring siaran radio. <br>
-        • OBS Studio dasar. <br>
-        • Siaran Radio. <br>
+        • Operator podcast (sound check, switcher, mixer).<br>
+        • Monitoring siaran radio.<br>
+        • OBS Studio dasar.<br>
+        • Siaran Radio.<br>
         • Operator Talkshow (Switcher & OBS).
       </p>
     </div>
 
     <div class="profile-box">
       <div class="info-title">Kontak</div>
-
-      <p>📧 Email:
-        <a style="color:#00eaff" href="mailto:rayhanalfarizi016@gmail.com">
-          rayhanalfarizi016@gmail.com
-        </a>
-      </p>
-
+      <p>📧 Email: <a href="mailto:rayhanalfarizi016@gmail.com" style="color:#00eaff;">rayhanalfarizi016@gmail.com</a></p>
       <div class="social-item">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
         <a href="https://instagram.com/alfarizxxy" target="_blank">@alfarizxxy</a>
       </div>
-
       <div class="social-item">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046120.png" alt="TikTok">
         <a href="https://tiktok.com/@rayhanpalis" target="_blank">@rayhanpalis</a>
       </div>
     </div>
-
   </section>
 
   <footer>© 2025 Rayhan Alfarizi — All Rights Reserved.</footer>
@@ -232,11 +438,7 @@
   <div id="cvModal">
     <div id="cvBox">
       <button id="closeCV" onclick="closeCV()">Tutup</button>
-
-      <!-- tombol download sudah benar -->
-    <a id="downloadCV" href="CV_Rayhan_Alfarizi.jpeg" download="CV_Rayhan_Alfarizi.jpeg">Download CV</a>
-
-
+      <a id="downloadCV" href="CV_Rayhan_Alfarizi.jpeg" download="CV_Rayhan_Alfarizi.jpeg">Download CV</a>
       <img id="cvImage" src="CV_Rayhan_Alfarizi.jpeg" alt="Preview CV">
     </div>
   </div>
@@ -246,6 +448,40 @@
   <canvas id="flowerCanvas"></canvas>
   <script src="flowers.js"></script>
 
+  <script>
+    function showSection(sectionId) {
+      document.querySelectorAll("section").forEach(sec => sec.style.display = "none");
+      document.getElementById(sectionId).style.display = "block";
+
+      document.querySelectorAll("nav a").forEach(link => link.classList.remove("active"));
+      document.getElementById("link-" + sectionId).classList.add("active");
+    }
+
+    // Inisialisasi beranda
+    showSection("home");
+
+    function toggleArticle(el) {
+      const fullText = el.previousElementSibling;
+      const shortText = fullText.previousElementSibling;
+      if (fullText.style.display === "none") {
+        fullText.style.display = "block";
+        shortText.style.display = "none";
+        el.textContent = "Sembunyikan";
+      } else {
+        fullText.style.display = "none";
+        shortText.style.display = "block";
+        el.textContent = "Baca Selengkapnya";
+      }
+    }
+
+    function openCV() {
+      document.getElementById("cvModal").style.display = "flex";
+    }
+
+    function closeCV() {
+      document.getElementById("cvModal").style.display = "none";
+    }
+  </script>
 </body>
 
 </html>
